# kelp-wanted-competition

./: .env-sample  .flake8  .gitignore  .pre-commit-config.yaml  404.html  Dockerfile  LICENSE  Makefile  README.md  conda-lock.yml  dev-log.md  env.yaml  index.html  mkdocs.yml  objects.inv  pyproject.toml  setup.py
.azure-pipelines/: ci-env.yaml  ci-pipeline.yaml  run-hparam-search-pipeline.yaml  training-pipeline.yaml
.azure-pipelines/templates/: connect-to-aml-workspace.yaml  install-aml-cli.yaml  install-az-cli.yaml
aml/components/: train.yaml  train_model.yaml  train_sampler_weights.yaml  train_spectral_indices.yaml  train_spectral_indices_nan.yaml  train_spectral_indices_nan_15.yaml  train_spectral_indices_zeros.yaml  train_split.yaml
aml/environments/acpt_train_env/: env.yaml  env_spec.yaml  requirements.txt
aml/pipelines/: cv_split_hparam_search_pipeline.yaml  model_hparam_search_pipeline.yaml  sampler_hparam_search_pipeline.yaml  sampler_weight_hparam_search_pipeline.yaml  spectral_indices_hparam_search_pipeline.yaml  spectral_indices_hparam_search_pipeline_nan.yaml  spectral_indices_hparam_search_pipeline_nan_15.yaml  spectral_indices_hparam_search_pipeline_zeros.yaml  training_pipeline.yaml
api_ref/: index.html
api_ref/consts/: index.html
api_ref/utils/: index.html
data/submissions/: submission-log.csv  submission-table.csv
dev-log/: index.html
docs/: dev-log.md  index.md  technical-report.md
docs/api_ref/: index.md  kelp.consts.md  kelp.core.configs.md  kelp.core.md  kelp.core.settings.md  kelp.data_prep.dataset_prep.md  kelp.data_prep.sahi_dataset_prep.md  kelp.data_prep.train_val_test_split.md  kelp.utils.md  utils.md
docs/guides/: contributing.md  data-prep.md  evaluation.md  inference.md  makefile-usage.md  mlflow-artifacts.md  reproducibility.md  sahi.md  setup-dev-env.md  submissions.md  tests.md  training.md  xgb-stuff.md
guides/contributing/: index.html
guides/data-prep/: index.html
guides/evaluation/: index.html
guides/inference/: index.html
guides/makefile-usage/: index.html
guides/mlflow-artifacts/: index.html
guides/reproducibility/: index.html
guides/sahi/: index.html
guides/setup-dev-env/: index.html
guides/submissions/: index.html
guides/tests/: index.html
guides/training/: index.html
guides/xgb-stuff/: index.html
kelp/consts/: __init__.py  classes.py  data.py  directories.py  logging.py  splits.py
kelp/core/: indices.py  settings.py  submission.py
kelp/data/: datamodule.py  dataset.py  indices.py  normalization.py  plotting.py  transforms.py  utils.py
kelp/data_prep/: aoi_grouping.py  calculate_band_stats.py  dataset_prep.py  eda.py  move_split_files.py  plot_samples.py  sahi_dataset_prep.py  train_val_test_split.py
kelp/entrypoints/: aio_grouping.py  aoi_grouping.py  average_predictions.py  calculate_band_stats.py  dataset_prep.py  eda.py  eval.py  plot_samples.py  predict.py  predict_and_submit.py  preprocess.py  preview_submission.py  train.py  train_tree.py  train_val_test_split.py
kelp/models/: factories.py  segmentation.py
kelp/utils/: gpu.py  logging.py  mlflow.py  plotting.py  serialization.py
logs/: dev-log.md
notebooks/: local-vs-public-scores.ipynb
search/: search_index.json
technical-report/: index.html
tests/: conftest.py
tests/unit/: test_models.py
(+141 files in other folders)
